2005-01-12 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* watchquagga.c: (run_job) Fix bug: delay.tv_sec was being used
	  without having been initialized when the "force" argument was true.
	  (try_restart) When phased restart is stopping the routing daemons,
	  it should tell run_job to update the restart interval.
	  (phase_check) In final step of phased restart when the routing
	  daemons are being started again, tell run_job not to update
	  the restart interval (this is now done when the daemons are
	  stopped).

2004-12-29 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* watchquagga.c: In several places, cast pid_t to int for printf to
	  avoid complaints on Solaris 8.

2004-12-29 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* watchquagga.c: Fix headers: get most stuff from zebra.h.

2004-12-23 Paul Jakma <paul@dishone.st>

	* watchquagga.c: Add missing getopt.h include

2004-12-22 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* watchquagga.c: Try for gcc 2.95 compatibility (avoid %z and a tricky
	  initialization).

2004-12-22 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* watchquagga.c: Add -b option to circumvent difficulties passing
	  embedded spaces in command-line arguments.  This is an ugly hack,
	  we should probably use a config file instead.

2004-12-22 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* watchquagga.c: Use new config.h define for DAEMON_VTY_DIR.

2004-12-22 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* watchquagga.c: Get PATH_WATCHQUAGGA_PID from config.h.

2004-12-21 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* .cvsignore: Added.

2004-12-21 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* {ChangeLog,watchquagga.c,Makefile.am}: Created.